feat(navigator): ✨ streamline team switching logic and improve command interception